<resources>
    <string name="app_name">DATA Ta\'lim Stansiyasi Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Course_ID">Course ID</string>
    <string name="Course_Name">Course Name</string>
    <string name="course_duration">Course Duration</string>
    <string name="course_price">Course Price</string>
    <string name="data_courses_list">DATA Courses List</string>
    <string name="course_name">Course Name</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="add_course">Add Course</string>
    <string name="add">Add</string>
</resources>